# cubegame

./: .gitignore  Cargo.toml  rustfmt.toml
cubegame/: Cargo.toml
cubegame-server/: Cargo.toml
cubegame/src/: lib.rs  main.rs
cubegame/src/application/: framerate.rs  mod.rs
cubegame/src/player/: controller.rs  mod.rs
cubegame/src/render/: camera.rs  mod.rs
cubegame/src/render/mesh/: mod.rs
cubegame_client/: Cargo.toml  build.rs
cubegame_client/src/: lib.rs  main.rs  util.rs
cubegame_client/src/application/: framerate.rs  mod.rs
cubegame_client/src/game/: chunk.rs  controller.rs  mod.rs  player.rs  world.rs
cubegame_client/src/game/player/: mod.rs
cubegame_client/src/game/world/: chunk.rs  mod.rs
cubegame_client/src/player/: mod.rs
cubegame_client/src/render/: camera.rs  mesher.rs  mod.rs  perspective.rs  shader_frag.wgsl  shader_vert.wgsl  texture.rs
cubegame_client/src/render/mesh/: mesher.rs  mod.rs  vert.rs
cubegame_client/src/render/objects/: mesh.rs  mod.rs  vert.rs
cubegame_client/src/render/objects/lines/: mod.rs  vert.rs
cubegame_client/src/render/objects/mesh/: mod.rs  vert.rs
cubegame_client/src/render/passes/: line_rendering.rs  line_shader.wgsl  mod.rs  world_rendering.rs  world_shader.wgsl  world_shader_frag.wgsl  world_shader_vert.wgsl
cubegame_client/src/render/pipelines/: mod.rs
cubegame_client/src/render/pipelines/world_rendering/: mod.rs  world_shader_vert.wgsl
cubegame_client/src/render/texture/: atlas.rs  depth_buffer.rs  mod.rs
cubegame_lib/: Cargo.toml
cubegame_lib/src/: communication.rs  lib.rs
cubegame_lib/src/blocks/: mod.rs
cubegame_lib/src/communication/: message.rs
cubegame_lib/src/data/: mod.rs
cubegame_lib/src/worldgen/: mod.rs
cubegame_server/: Cargo.toml
cubegame_server/src/: lib.rs  main.rs
src/: lib.rs  main.rs
src/application/: mod.rs
src/render/: camera.rs  mod.rs  shader.wgsl
src/render/mesh/: mod.rs  vert.rs
