[package]
name = "cubegame"
description = "Cubegame client"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition = "2021"

[[bin]]
name = "cubegame"
path = "src/main.rs"

[dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
nalgebra = "0.33"
pollster = "0.4"
spin_sleep = "1.3"
wgpu = "22.0"
winit = { version = "0.30.8", features = ["rwh_05"] }
