[package]
name = "cubegame"
description = "Cubegame client"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition = "2021"

[[bin]]
name = "cubegame"

[dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
crunch = "0.5.3"
cubegame-lib = { path = "../cubegame_lib" }
cubegame-server = { path = "../cubegame_server" }
env_logger = "0.11.6"
http = "1.2.0"
image = "0.25.5"
log = "0.4"
nalgebra = "0.33.2"
pollster = "0.4.0"
spin_sleep = "1.3.0"
tungstenite = "0.26.1"
wgpu = "22.1.0"
winit = { version = "0.30.8", features = ["rwh_05"] }

[build-dependencies]
fs_extra = "1.3"