[package]
name = "cubegame-lib"
edition = "2021"
version.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "cubegame_lib"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
bitmask-enum = "2.2.5"
lazy_static = "1.5"
noise = "0.9.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.217", features = ["derive"] }
